Updated package keyword tags in package.json and updated package name in README.md

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 	"keywords": [
 		"cli-app",
 		"cli",
-		""
+		"colors",
+	  	"styles",
+	  	"print"
 	],
 	"dependencies": {
 		"ansi-color": "^0.2.1",
