--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-	"name": "printstyled",
-	"version": "1.3.2",
-	"description": "CLI tool to intuitively colorize and stylize text in Bash and Javascript Terminals.",
-	"license": "MIT",
-	"repository": "mattdanielbrown/colortext",
 	"author": {
 		"name": "Matt Daniel Brown",
 		"email": "developer@mattdanielbrown.com",
 		"url": "mattdanielbrown.com"
 	},
 	"bin": "cli.js",
+	"dependencies": {
+		"ansi-color": "^0.2.1",
+		"chalk": "^4.1.0",
+		"cli-color": "^2.0.0",
+		"control-sequence-introducer": "^0.0.2",
+		"meow": "^8.0.0",
+		"np": "^7.0.0"
+	},
+	"description": "CLI tool to intuitively colorize and stylize text in Bash and Javascript Terminals.",
+	"devDependencies": {
+		"ava": "^3.14.0",
+		"eslint": "^7.15.0",
+		"eslint-config-standard": "^16.0.2",
+		"eslint-plugin-import": "^2.20.1",
+		"eslint-plugin-node": "^11.0.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"xo": "^0.36.1"
+	},
 	"engines": {
 		"node": ">=8"
-	},
-	"scripts": {
-		"test": "xo && ava"
 	},
 	"files": [
 		"index.js",
@@ -27,22 +37,11 @@
 		"styles",
 		"print"
 	],
-	"dependencies": {
-		"ansi-color": "^0.2.1",
-		"chalk": "^4.1.0",
-		"cli-color": "^2.0.0",
-		"control-sequence-introducer": "^0.0.2",
-		"meow": "^8.0.0",
-		"np": "^7.0.0"
+	"license": "MIT",
+	"name": "printstyled",
+	"repository": "mattdanielbrown/printstyled",
+	"scripts": {
+		"test": "xo && ava"
 	},
-	"devDependencies": {
-		"ava": "^3.14.0",
-		"eslint": "^7.15.0",
-		"eslint-config-standard": "^16.0.2",
-		"eslint-plugin-import": "^2.20.1",
-		"eslint-plugin-node": "^11.0.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^5.0.0",
-		"xo": "^0.36.1"
-	}
+	"version": "1.3.2"
 }
