--- a/package.json
+++ b/package.json
@@ -43,5 +43,22 @@
 	"scripts": {
 		"test": "xo && ava"
 	},
-	"version": "1.3.2"
+	"version": "1.3.2",
+	"eslintConfig" : {
+		"rules"     : {
+			"indent" : [ "error" , "tab" ],
+			"unicorn/no-abusive-eslint-disable": "off"
+		},
+		"overrides" : [
+			{
+				"files"         : [ "bin/*.js" , "lib/*.js" ] ,
+				"excludedFiles" : ["*.test.js", "util/other-text-styling.js"] ,
+				"rules"         : {
+					"unicorn/no-abusive-eslint-disable": "off",
+					"" : [ "error" , "single" ]
+				}
+			}
+		]
+	},
+	"eslintIgnore": ["util/other-text-styling.js"]
 }
